--- a/employee/src/main/resources/application.properties
+++ b/employee/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=employee
+server.port=8082
 
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/vacation_db
 spring.datasource.username=postgres
 spring.datasource.password=secret_pass
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+
+# Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
