Create compose files for services

--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=admin
+server.address=0.0.0.0
+
 server.port=8081
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/vacation_db
-spring.datasource.username=postgres
-spring.datasource.password=secret_pass
+spring.datasource.url=jdbc:postgresql://localhost:5433/admin_db
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.jpa.show-sql=false
 
 #Maximum file size (e.g., 128KB)
