--- a/employee/src/main/resources/application.properties
+++ b/employee/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=employee
 server.port=8082
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/vacation_db
-spring.datasource.username=postgres
-spring.datasource.password=secret_pass
+spring.datasource.url=jdbc:postgresql://localhost:5434/employee_db
+spring.datasource.username=employee
+spring.datasource.password=employee
 spring.jpa.show-sql=false
 
 # Eureka
