--- a/employee/compose.yaml
+++ b/employee/compose.yaml
@@ -1,9 +1,15 @@
 services:
-  postgres:
+  employee-db:
     image: 'postgres:latest'
     environment:
-      - POSTGRES_DB=vacation_db
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
+      - POSTGRES_DB=employee_db
+      - POSTGRES_USER=employee
+      - POSTGRES_PASSWORD=employee
     ports:
-      - '5432'
+      - "5434:5432"
+    volumes:
+      - employee-db-data:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+
+volumes:
+  employee-db-data:
