--- a/employee/src/main/resources/application.properties
+++ b/employee/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=employee
+spring.application.name=employee-service
 server.port=8082
 
 spring.datasource.driverClassName=org.postgresql.Driver
