Add Apache Kafka and CQRS

--- a/admin/src/main/resources/application.properties
+++ b/admin/src/main/resources/application.properties
@@ -19,3 +19,13 @@ spring.servlet.multipart.resolve-lazily=false
 
 # Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+# Kafka
+spring.kafka.bootstrap-servers=localhost:9093
+spring.kafka.consumer.group-id=admin-group
+spring.kafka.consumer.auto-offset-reset=earliest
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.topic.vacation-tracker.admin=vacation-tracker-admin
+spring.kafka.topic.vacation-tracker.employee=vacation-tracker-employee
+spring.kafka.consumer.properties.spring.deserializer.trusted.packages=com.vacation-tracker.admin.model
