--- a/employee/src/main/resources/application.properties
+++ b/employee/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.show-sql=false
 
 # Eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+# Kafka
+spring.kafka.bootstrap-servers=localhost:9093
+spring.kafka.consumer.group-id=employee-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.topic.vacation-tracker.admin=vacation-tracker-admin
+spring.kafka.topic.vacation-tracker.employee=vacation-tracker-employee
+spring.kafka.consumer.properties.spring.deserializer.trusted.packages=com.vacation-tracker.employee.model
